fixing heroku spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -523,7 +523,7 @@ footer li .btn {
 .columns {
 	margin-top: 0; }
 .columns p {
-        padding: 2% 5%; } 
+        padding: 2% 4%; } 
     }
 
 .project-title {
